--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@ body {
   font-family: sans-serif;
 }
 
+.inp{
+  border:none;
+  width: 20px;
+}
+
 .list{
   margin-top: 20px;
 }
@@ -13,7 +18,7 @@ body {
   margin-left: 10px;
 }
 
-.App{
+.App1{
   border-bottom: solid 2px silver;
   height: 60px;
 }
@@ -40,9 +45,10 @@ body {
   float: left;
 }
 
-.secondBody{
+.second{
   font-size: 16px;
   overflow-y: scroll;
+  height: 100vh;
 }
 
 .title{
