--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,11 @@ body {
 .App1{
   border-bottom: solid 2px silver;
   height: 60px;
+  padding: 0px;
+}
+
+.main_div{
+    padding: 0px;
 }
 
 #img1{
@@ -31,7 +36,7 @@ body {
 
 .body{
   border-right:solid 2px silver;
-  height: 100vh;
+  height: 91vh;
   overflow-y: scroll;
   padding: 10px 60px;
   font-size: 16px;
@@ -48,7 +53,7 @@ body {
 .second{
   font-size: 16px;
   overflow-y: scroll;
-  height: 100vh;
+  height: 91vh;
 }
 
 .title{
